Ensure that navbar is visible before we drop below the fold.

--- a/themes/hugo-agency-theme/static/css/agency.css
+++ b/themes/hugo-agency-theme/static/css/agency.css
@@ -268,7 +268,8 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default {
         padding: 25px 0;
         border: 0;
-        background-color: transparent;
+        /* background-color: transparent; */
+        background-color: rgba(0,0,0,.3);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
